--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.1
   retrofit: ^4.1.0
   talker: ^4.0.1
+  lottie: any
   hydrated_bloc: ^9.1.2
   path_provider: ^2.1.1
   talker_bloc_logger: ^4.0.1
@@ -88,6 +89,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animations/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
